// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`interactive UI screenshots > a bare \`agent\` opens on the new-session composer 1`] = `
"

   ellipsis.dev                                               @hunter in acme





                          What are we shipping today?

                      A fixed fact for stable screenshots.




     Repository: acme/cli
     Agent: Default
     Model: Default

   ▶ Start a cloud agent…"
`;

exports[`interactive UI screenshots > enter on a picked session opens its chat 1`] = `
" ✦ Cloud agent session on ellipsis.dev
   ⎿  Sandbox started · 1 log line

 ● I found the login bug: the token refresh races the redirect.

 ● Fixed in auth.ts; opening a PR now.


  ▶

waiting · $0.42 total · session_a · v1.3.0"
`;

exports[`interactive UI screenshots > esc opens the session picker; ↓ moves the highlight to the first session 1`] = `
"

   ellipsis.dev                           filtering to acme/cli · last 7 days


  ▶ New session
  ● fix the login bug                                   12.4k · $0.42 · 5m ago
  ● write release notes                                 12.4k · $0.42 · 1h ago
  ● refactor the theme module                           12.4k · $0.42 · 5h ago












  ↑↓ move · enter open · n new · esc back to the chat · q quit"
`;

exports[`interactive UI screenshots > esc opens the session picker; ↓ moves the highlight to the first session 2`] = `
"

   ellipsis.dev                           filtering to acme/cli · last 7 days


  + New session
  ▶ fix the login bug                                   12.4k · $0.42 · 5m ago
  ● write release notes                                 12.4k · $0.42 · 1h ago
  ● refactor the theme module                           12.4k · $0.42 · 5h ago












  ↑↓ move · enter open · n new · esc back to the chat · q quit"
`;
